<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CalculatorActivity!</string>
    <string name="app_name">Calculator</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="plus">Add</string>
    <string name="minus">Sub</string>
    <string name="nul"></string>
    <string name="clear">clear</string>
    <string name="zer">zero</string>
    <string name="divide">Divide</string>
    <string name="mul">Mul</string>
    <string name="created">..Lovingly created by Sanjay..</string>

</resources>